added events pull_request

--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,5 +1,15 @@
 name: Events Demo 1
-on: ...
+#on: [push, workflow_dispatch]
+# we do not want all pushes to all branches to execute this workflow
+# we do not want to deploy unless master branch pushed
+on:
+  pull_request:
+    #types: [opened, edited]
+    types:
+      - opened
+      #- edited
+      # which activity types trigger the pull_request
+  workflow_dispatch:
 jobs:
   deploy:
     runs-on: ubuntu-latest
