--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -24,8 +24,8 @@ on:
       - 'dev-*'  # dev-new dev-this-is-new; the * means anything other than slashes /
       - 'feat/**' # feat/new feat/new/button; the ** includes slashes /
       #developer-1, for example, would not trigger the build
-    paths-ignore:
-      - '.github/workflows/*'
+    #paths-ignore:
+    #  - '.github/workflows/*'
         #the push will only trigger the workflow if github/workflows file was NOT changed.
         # if other files changed and this file changed it will not trigger the workflow 
     #paths:
