--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -15,6 +15,7 @@ on:
       - main # main
       - 'dev-*' # dev-new dev-this-is-new
       - 'feat/**' # feat/new feat/new/button
+      - 'dev'
   workflow_dispatch:
   push:
     branches:
