--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -13,6 +13,7 @@ on:
     branches:
     # note that this branch pull refers to the TARGET of the pull request and not the source
       - main # main
+      - master
       - 'dev-*' # dev-new dev-this-is-new
       - 'feat/**' # feat/new feat/new/button
   workflow_dispatch:
