--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -9,7 +9,22 @@ on:
       - opened
       #- edited
       # which activity types trigger the pull_request
+    branches:
+      - main # main
+      - master
+      - 'dev-*' # dev-new dev-this-is-new
+      - 'feat/**' # feat/new feat/new/button
   workflow_dispatch:
+  push:
+    branches:
+      - main # main
+      - master
+      - 'dev-*' # dev-new dev-this-is-new
+      - 'feat/**' # feat/new feat/new/button
+      # developer-1
+    paths-ignore:
+      - '.github/workflows/*'
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
